--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=part1
+spring.datasource.url=jdbc:mysql://localhost:3306/part1db
+spring.datasource.username=part1
+spring.datasource.password=anarita1289
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
