--- a/part2/part2/app/src/main/AndroidManifest.xml
+++ b/part2/part2/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         </activity>
         <activity
             android:name=".ui.activity.CreateCourseActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".ui.activity.MainActivity"/>
     </application>
 
 </manifest>
