--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,6 +1,6 @@
 spring.application.name=part1
-spring.datasource.url=jdbc:mysql://localhost:..../part1testdb
-spring.datasource.username=part1
-spring.datasource.password=password
+spring.datasource.url=jdbc:mysql://localhost:..../part1test
+spring.datasource.username=root
+spring.datasource.password=P@ssword99
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
