--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=part1
-spring.datasource.url=jdbc:mysql://localhost:3306/part1db
-spring.datasource.username=part1
-spring.datasource.password=password
+spring.datasource.url=jdbc:mysql://localhost:3306/part1
+spring.datasource.username=root
+spring.datasource.password=P@ssword99
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
