--- a/part2/part2/app/src/main/AndroidManifest.xml
+++ b/part2/part2/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.Part2"
         tools:targetApi="31">
         <activity
+            android:name=".ui.activity.EditStudentActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.activity.CourseDetailsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.activity.StudentDetailsActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.activity.MainActivity"
             android:exported="true">
             <intent-filter>
@@ -24,7 +33,7 @@
         <activity
             android:name=".ui.activity.CreateCourseActivity"
             android:exported="false"
-            android:parentActivityName=".ui.activity.MainActivity"/>
+            android:parentActivityName=".ui.activity.MainActivity" />
     </application>
 
 </manifest>
