--- a/part2/part2/app/src/main/AndroidManifest.xml
+++ b/part2/part2/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
 
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+
+    xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.VIBRATE"/>
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,8 +15,15 @@
         android:theme="@style/Theme.Part2"
         tools:targetApi="31">
         <activity
+            android:name=".ui.activity.CourseDetailsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.activity.AddStudentActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.activity.MainActivity"
             android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,7 +33,7 @@
         <activity
             android:name=".ui.activity.CreateCourseActivity"
             android:exported="false"
-            android:parentActivityName=".ui.activity.MainActivity"/>
+            android:parentActivityName=".ui.activity.MainActivity" />
     </application>
 
 </manifest>
