Added the fixed code for the 3rd, 4th anf 5th question

--- a/part2/part2/.gitignore
+++ b/part2/part2/.gitignore
@@ -1,15 +1,35 @@
+# Android Studio & IntelliJ
 *.iml
-.gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
-.DS_Store
-/build
-/captures
-.externalNativeBuild
-.cxx
+.idea/
+.gradle/
 local.properties
+
+# Build output
+/build/
+**/build/
+.cxx/
+.externalNativeBuild/
+
+# Gradle Caches and Logs
+.gradle/
+**/*.lock
+**/*.log
+.caches/
+**/.caches/
+
+# macOS junk
+.DS_Store
+
+# Android captures
+captures/
+
+# Other
+*.apk
+*.ap_
+
+**/.gradle/
+**/caches/
+build/
+**/build/
+*.lock
+*.log
