Did my final bit fo checking Jabir's code and it runs

--- a/part2/part2/app/src/main/AndroidManifest.xml
+++ b/part2/part2/app/src/main/AndroidManifest.xml
@@ -20,6 +20,13 @@
         <activity
             android:name=".ui.activity.AddStudentActivity"
             android:exported="false" />
+        <activity android:name=".ui.activity.StudentDetailsActivity"
+            android:parentActivityName=".ui.activity.CourseDetailsActivity"
+            android:exported="false" />
+        <activity android:name=".ui.activity.EditStudentActivity"
+            android:parentActivityName=".ui.activity.CourseDetailsActivity"
+            android:exported="false" />
+
         <activity
             android:name=".ui.activity.MainActivity"
             android:exported="true">
