--- a/part1/src/main/resources/application.properties
+++ b/part1/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=part1
 spring.datasource.url=jdbc:mysql://localhost:3306/part1
 spring.datasource.username=root
-spring.datasource.password=Chadan_1220
+spring.datasource.password=password
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
