--- a/part1/src/main/resources/application-test.properties
+++ b/part1/src/main/resources/application-test.properties
@@ -1,5 +1,5 @@
 spring.application.name=part1
-spring.datasource.url=jdbc:mysql://localhost:..../part1test
+spring.datasource.url=jdbc:mysql://localhost:3306/part1test
 spring.datasource.username=root
 spring.datasource.password=P@ssword99
 spring.jpa.show-sql=true
