--- a/part1/src/main/resources/application-test.properties
+++ b/part1/src/main/resources/application-test.properties
@@ -1,6 +1,7 @@
 spring.application.name=part1
 spring.datasource.url=jdbc:mysql://localhost:3306/part1test
 spring.datasource.username=root
-spring.datasource.password=P@ssword99
+spring.datasource.password=password
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
